rudy-db/tests/snapshots/enum_type_resolution@x86_64-unknown-linux-gnu.snap
---
source: rudy-db/tests/static_tests.rs
expression: test_enum_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: Enum(
        EnumLayout {
            name: "TestEnum",
            discriminant: Discriminant {
                ty: UnsignedInt(
                    UnsignedIntLayout {
                        size: 8,
                    },
                ),
                offset: 0,
            },
            variants: [
                EnumVariantLayout {
                    name: "Unit",
                    discriminant: Some(
                        9223372036854775808,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Unit",
                        },
                        location: Die at DebugFile { [salsa id]: Id(800) } 0x000028a5,
                    },
                },
                EnumVariantLayout {
                    name: "Tuple",
                    discriminant: None,
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Tuple",
                        },
                        location: Die at DebugFile { [salsa id]: Id(800) } 0x000028ad,
                    },
                },
                EnumVariantLayout {
                    name: "Struct",
                    discriminant: Some(
                        9223372036854775810,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Struct",
                        },
                        location: Die at DebugFile { [salsa id]: Id(800) } 0x000028ce,
                    },
                },
            ],
            size: 32,
        },
    ),
    location: Die at DebugFile { [salsa id]: Id(800) } 0x00002859,
}
