rudy-db/tests/snapshots/function_discovery@aarch64-unknown-linux-gnu-3.snap
---
source: rudy-db/tests/static_tests.rs
expression: subset
snapshot_kind: text
---
{
    "simple_test::function_call": DiscoveredFunction {
        name: "function_call",
        full_name: "simple_test::function_call",
        signature: "fn function_call(x: i32) -> i32",
        address: 25944,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    Int(
                        IntLayout {
                            size: 4,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/simple_test 0x000005a6,
            },
        ),
        parameters: [
            FunctionParameter {
                name: Some(
                    "x",
                ),
                type_def: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/simple_test 0x000005a6,
                },
            },
        ],
    },
    "simple_test::main": DiscoveredFunction {
        name: "main",
        full_name: "simple_test::main",
        signature: "fn main()",
        address: 26048,
        callable: true,
        module_path: [
            "simple_test",
        ],
        return_type: None,
        parameters: [],
    },
}
