rudy-db/tests/snapshots/method_discovery@aarch64-apple-darwin.snap
---
source: rudy-db/tests/static_tests.rs
expression: methods
snapshot_kind: text
---
[
    DiscoveredMethod {
        name: "new",
        full_name: "method_discovery::Session::new",
        signature: "fn new(_: u64, _: String) -> Session",
        address: 4294972984,
        self_type: None,
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Struct(
                    StructLayout {
                        name: "Session",
                        size: 32,
                        alignment: 8,
                        fields: [
                            StructField {
                                name: "id",
                                offset: 24,
                                ty: TypeDefinition {
                                    layout: Primitive(
                                        UnsignedInt(
                                            UnsignedIntLayout {
                                                size: 8,
                                            },
                                        ),
                                    ),
                                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000002e7,
                                },
                            },
                            StructField {
                                name: "name",
                                offset: 0,
                                ty: TypeDefinition {
                                    layout: Std(
                                        String(
                                            StringLayout(
                                                VecLayout {
                                                    length_offset: 16,
                                                    data_ptr_offset: 8,
                                                    capacity_offset: 0,
                                                    inner_type: TypeDefinition {
                                                        layout: Primitive(
                                                            UnsignedInt(
                                                                UnsignedIntLayout {
                                                                    size: 1,
                                                                },
                                                            ),
                                                        ),
                                                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000003c5,
                                                    },
                                                },
                                            ),
                                        ),
                                    ),
                                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000002f8,
                                },
                            },
                        ],
                    },
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x0000002f,
            },
        ),
        parameters: [
            FunctionParameter {
                name: None,
                type_def: TypeDefinition {
                    layout: Primitive(
                        UnsignedInt(
                            UnsignedIntLayout {
                                size: 8,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000002e7,
                },
            },
            FunctionParameter {
                name: None,
                type_def: TypeDefinition {
                    layout: Std(
                        String(
                            StringLayout(
                                VecLayout {
                                    length_offset: 16,
                                    data_ptr_offset: 8,
                                    capacity_offset: 0,
                                    inner_type: TypeDefinition {
                                        layout: Primitive(
                                            UnsignedInt(
                                                UnsignedIntLayout {
                                                    size: 1,
                                                },
                                            ),
                                        ),
                                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000003c5,
                                    },
                                },
                            ),
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000002f8,
                },
            },
        ],
    },
    DiscoveredMethod {
        name: "get_id",
        full_name: "method_discovery::Session::get_id",
        signature: "fn get_id(&self) -> u64",
        address: 4294973036,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    UnsignedInt(
                        UnsignedIntLayout {
                            size: 8,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000002e7,
            },
        ),
        parameters: [],
    },
    DiscoveredMethod {
        name: "set_name",
        full_name: "method_discovery::Session::set_name",
        signature: "fn set_name(&mut self, _: String)",
        address: 4294973072,
        self_type: Some(
            BorrowedMut,
        ),
        callable: true,
        is_synthetic: false,
        return_type: None,
        parameters: [
            FunctionParameter {
                name: None,
                type_def: TypeDefinition {
                    layout: Std(
                        String(
                            StringLayout(
                                VecLayout {
                                    length_offset: 16,
                                    data_ptr_offset: 8,
                                    capacity_offset: 0,
                                    inner_type: TypeDefinition {
                                        layout: Primitive(
                                            UnsignedInt(
                                                UnsignedIntLayout {
                                                    size: 1,
                                                },
                                            ),
                                        ),
                                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000003c5,
                                    },
                                },
                            ),
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000002f8,
                },
            },
        ],
    },
    DiscoveredMethod {
        name: "describe",
        full_name: "<method_discovery::Session as method_discovery::Describable>::describe (from method_discovery)",
        signature: "fn describe(&self) -> String",
        address: 4294973192,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Std(
                    String(
                        StringLayout(
                            VecLayout {
                                length_offset: 16,
                                data_ptr_offset: 8,
                                capacity_offset: 0,
                                inner_type: TypeDefinition {
                                    layout: Primitive(
                                        UnsignedInt(
                                            UnsignedIntLayout {
                                                size: 1,
                                            },
                                        ),
                                    ),
                                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000003c5,
                                },
                            },
                        ),
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000002f8,
            },
        ),
        parameters: [],
    },
    DiscoveredMethod {
        name: "description_length",
        full_name: "<method_discovery::Session as method_discovery::Describable>::description_length (from method_discovery)",
        signature: "fn description_length(&self) -> u64",
        address: 4294973324,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    UnsignedInt(
                        UnsignedIntLayout {
                            size: 8,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x00000581,
            },
        ),
        parameters: [],
    },
    DiscoveredMethod {
        name: "identifier",
        full_name: "<method_discovery::Session as method_discovery::Identifiable>::identifier (from method_discovery)",
        signature: "fn identifier(&self) -> String",
        address: 4294973436,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Std(
                    String(
                        StringLayout(
                            VecLayout {
                                length_offset: 16,
                                data_ptr_offset: 8,
                                capacity_offset: 0,
                                inner_type: TypeDefinition {
                                    layout: Primitive(
                                        UnsignedInt(
                                            UnsignedIntLayout {
                                                size: 1,
                                            },
                                        ),
                                    ),
                                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000003c5,
                                },
                            },
                        ),
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x000002f8,
            },
        ),
        parameters: [],
    },
    DiscoveredMethod {
        name: "fmt",
        full_name: "<method_discovery::Session as core::fmt::Display>::fmt (from core)",
        signature: "fn fmt(&self, f: ?) -> Result<(), Error>",
        address: 4294973544,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Std(
                    Result(
                        ResultLayout {
                            name: "Result<(), core::fmt::Error>",
                            discriminant: Discriminant {
                                ty: UnsignedInt(
                                    UnsignedIntLayout {
                                        size: 1,
                                    },
                                ),
                                offset: 0,
                            },
                            ok_type: TypeDefinition {
                                layout: Primitive(
                                    Unit(
                                        UnitLayout,
                                    ),
                                ),
                                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x00000654,
                            },
                            ok_offset: 1,
                            err_type: TypeDefinition {
                                layout: Alias {
                                    name: "Error",
                                },
                                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x0000051c,
                            },
                            err_offset: 1,
                            size: 1,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x00000496,
            },
        ),
        parameters: [
            FunctionParameter {
                name: Some(
                    "f",
                ),
                type_def: TypeDefinition {
                    layout: Alias {
                        name: "unknown",
                    },
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/method_discovery-9345129d5464184a.7eyftk1hcd3c7u47k7v1aleo1.17y0zdp.rcgu.o 0x0000065b,
                },
            },
        ],
    },
]
