rudy-db/tests/snapshots/method_discovery@aarch64-unknown-linux-gnu.snap
---
source: rudy-db/tests/static_tests.rs
expression: methods
snapshot_kind: text
---
[
    DiscoveredMethod {
        name: "new",
        full_name: "method_discovery::Session::new",
        signature: "fn new(_: u64, _: String) -> Session",
        address: 28388,
        self_type: None,
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Struct(
                    StructLayout {
                        name: "Session",
                        size: 32,
                        alignment: 8,
                        fields: [
                            StructField {
                                name: "id",
                                offset: 24,
                                ty: TypeDefinition {
                                    layout: Primitive(
                                        UnsignedInt(
                                            UnsignedIntLayout {
                                                size: 8,
                                            },
                                        ),
                                    ),
                                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000031e8,
                                },
                            },
                            StructField {
                                name: "name",
                                offset: 0,
                                ty: TypeDefinition {
                                    layout: Std(
                                        String(
                                            StringLayout(
                                                VecLayout {
                                                    length_offset: 16,
                                                    data_ptr_offset: 8,
                                                    capacity_offset: 0,
                                                    inner_type: TypeDefinition {
                                                        layout: Primitive(
                                                            UnsignedInt(
                                                                UnsignedIntLayout {
                                                                    size: 1,
                                                                },
                                                            ),
                                                        ),
                                                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000032c6,
                                                    },
                                                },
                                            ),
                                        ),
                                    ),
                                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000031f9,
                                },
                            },
                        ],
                    },
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x00002f30,
            },
        ),
        parameters: [
            FunctionParameter {
                name: None,
                type_def: TypeDefinition {
                    layout: Primitive(
                        UnsignedInt(
                            UnsignedIntLayout {
                                size: 8,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000031e8,
                },
            },
            FunctionParameter {
                name: None,
                type_def: TypeDefinition {
                    layout: Std(
                        String(
                            StringLayout(
                                VecLayout {
                                    length_offset: 16,
                                    data_ptr_offset: 8,
                                    capacity_offset: 0,
                                    inner_type: TypeDefinition {
                                        layout: Primitive(
                                            UnsignedInt(
                                                UnsignedIntLayout {
                                                    size: 1,
                                                },
                                            ),
                                        ),
                                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000032c6,
                                    },
                                },
                            ),
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000031f9,
                },
            },
        ],
    },
    DiscoveredMethod {
        name: "get_id",
        full_name: "method_discovery::Session::get_id",
        signature: "fn get_id(&self) -> u64",
        address: 28440,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    UnsignedInt(
                        UnsignedIntLayout {
                            size: 8,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000031e8,
            },
        ),
        parameters: [],
    },
    DiscoveredMethod {
        name: "set_name",
        full_name: "method_discovery::Session::set_name",
        signature: "fn set_name(&mut self, _: String)",
        address: 28476,
        self_type: Some(
            BorrowedMut,
        ),
        callable: true,
        is_synthetic: false,
        return_type: None,
        parameters: [
            FunctionParameter {
                name: None,
                type_def: TypeDefinition {
                    layout: Std(
                        String(
                            StringLayout(
                                VecLayout {
                                    length_offset: 16,
                                    data_ptr_offset: 8,
                                    capacity_offset: 0,
                                    inner_type: TypeDefinition {
                                        layout: Primitive(
                                            UnsignedInt(
                                                UnsignedIntLayout {
                                                    size: 1,
                                                },
                                            ),
                                        ),
                                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000032c6,
                                    },
                                },
                            ),
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000031f9,
                },
            },
        ],
    },
    DiscoveredMethod {
        name: "describe",
        full_name: "<method_discovery::Session as method_discovery::Describable>::describe (from method_discovery)",
        signature: "fn describe(&self) -> String",
        address: 28596,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Std(
                    String(
                        StringLayout(
                            VecLayout {
                                length_offset: 16,
                                data_ptr_offset: 8,
                                capacity_offset: 0,
                                inner_type: TypeDefinition {
                                    layout: Primitive(
                                        UnsignedInt(
                                            UnsignedIntLayout {
                                                size: 1,
                                            },
                                        ),
                                    ),
                                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000032c6,
                                },
                            },
                        ),
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000031f9,
            },
        ),
        parameters: [],
    },
    DiscoveredMethod {
        name: "description_length",
        full_name: "<method_discovery::Session as method_discovery::Describable>::description_length (from method_discovery)",
        signature: "fn description_length(&self) -> u64",
        address: 28728,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Primitive(
                    UnsignedInt(
                        UnsignedIntLayout {
                            size: 8,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x00003482,
            },
        ),
        parameters: [],
    },
    DiscoveredMethod {
        name: "identifier",
        full_name: "<method_discovery::Session as method_discovery::Identifiable>::identifier (from method_discovery)",
        signature: "fn identifier(&self) -> String",
        address: 28840,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Std(
                    String(
                        StringLayout(
                            VecLayout {
                                length_offset: 16,
                                data_ptr_offset: 8,
                                capacity_offset: 0,
                                inner_type: TypeDefinition {
                                    layout: Primitive(
                                        UnsignedInt(
                                            UnsignedIntLayout {
                                                size: 1,
                                            },
                                        ),
                                    ),
                                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000032c6,
                                },
                            },
                        ),
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x000031f9,
            },
        ),
        parameters: [],
    },
    DiscoveredMethod {
        name: "fmt",
        full_name: "<method_discovery::Session as core::fmt::Display>::fmt (from core)",
        signature: "fn fmt(&self, f: ?) -> Result<(), Error>",
        address: 28948,
        self_type: Some(
            Borrowed,
        ),
        callable: true,
        is_synthetic: false,
        return_type: Some(
            TypeDefinition {
                layout: Std(
                    Result(
                        ResultLayout {
                            name: "Result<(), core::fmt::Error>",
                            discriminant: Discriminant {
                                ty: UnsignedInt(
                                    UnsignedIntLayout {
                                        size: 1,
                                    },
                                ),
                                offset: 0,
                            },
                            ok_type: TypeDefinition {
                                layout: Primitive(
                                    Unit(
                                        UnitLayout,
                                    ),
                                ),
                                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x00003555,
                            },
                            ok_offset: 1,
                            err_type: TypeDefinition {
                                layout: Alias {
                                    name: "Error",
                                },
                                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x0000341d,
                            },
                            err_offset: 1,
                            size: 1,
                        },
                    ),
                ),
                location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x00003397,
            },
        ),
        parameters: [
            FunctionParameter {
                name: Some(
                    "f",
                ),
                type_def: TypeDefinition {
                    layout: Alias {
                        name: "unknown",
                    },
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-unknown-linux-gnu/method_discovery 0x0000355c,
                },
            },
        ],
    },
]
